test/errors/library.rom
Error in `library.asm` on line 1: Could not include library `<missing.asm>`
